crates/hir-ty/tests/snapshots/body_types_snapshots__super_field_source.snap
---
source: crates/hir-ty/tests/body_types_snapshots.rs
assertion_line: 903
expression: out
---
FILE /src/com/example/A.java:
package com.example;

class A {
    int x = 1;
    protected int y = 2;
    static int z = 3;
}

class B extends A {
    int read() {
        return super.x + super.y;
    }

    int bad() {
        return super.z;
    }
}

field x
  locals: 
  exprs: e0: int
field y
  locals: 
  exprs: e1: int
field z
  locals: 
  exprs: e2: int
method read(): int
  locals: 
  exprs: e4: int | e6: int | e7: int
method bad(): int
  locals: 
  exprs: e9: <error>
