crates/hir-ty/tests/snapshots/body_types_snapshots__try_with_resources_infer.snap
---
source: crates/hir-ty/tests/body_types_snapshots.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Res implements AutoCloseable {
    Res() {}
    int read() { return 1; }
    public void close() {}
}

class Body {
    void m() {
        try (Res r = new Res(); var v = new Res()) {
            r.read();
        }
    }
}

method Res(): <init>
  locals: 
  exprs: 
method read(): int
  locals: 
  exprs: e0: int
method close(): void
  locals: 
  exprs: 
method m(): void
  locals: l0: com.example.Res | l1: com.example.Res
  exprs: e1: com.example.Res | e2: int | e3: com.example.Res | e4: com.example.Res
