crates/hir-ty/tests/snapshots/body_types_snapshots__var_local_decl.snap
---
source: crates/hir-ty/tests/body_types_snapshots.rs
assertion_line: 933
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    int m() {
        var s = "x";
        var n = 1 + 2;
        return s.length() + n;
    }
}

method m(): int
  locals: l0: java.lang.String | l1: int
  exprs: e0: java.lang.String | e1: int | e2: int | e3: int | e4: java.lang.String | e5: int | e6: int | e7: int
