crates/hir-ty/tests/snapshots/body_types_snapshots__var_multi_declarators.snap
---
source: crates/hir-ty/tests/body_types_snapshots.rs
assertion_line: 1049
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    int m() {
        var a = 1, b = 2, c;
        return a + b + c;
    }
}

method m(): int
  locals: l0: int | l1: int | l2: <error>
  exprs: e0: int | e1: int | e2: <error> | e3: <error> | e4: <error> | e5: <error> | e6: <error>
  diags: l2@4:25: var-without-initializer: variable 'c' is declared with 'var' but has no initializer
