crates/hir-ty/tests/snapshots/body_types_snapshots__var_without_initializer.snap
---
source: crates/hir-ty/tests/body_types_snapshots.rs
assertion_line: 1028
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    int m() {
        var x;
        return x + 1;
    }
}

method m(): int
  locals: l0: <error>
  exprs: e0: <error> | e1: int | e2: <error>
  diags: l0@4:12: var-without-initializer: variable 'x' is declared with 'var' but has no initializer
