crates/hir-ty/tests/snapshots/body_types_snapshots__yield_target.snap
---
source: crates/hir-ty/tests/body_types_snapshots.rs
assertion_line: 871
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    <T> T id(T x) {
        return x;
    }

    int m(boolean b) {
        String s = switch (b) {
            case true -> "a";
            default -> { yield id("b"); }
        };
        int n = switch (b) {
            case true -> 1;
            default -> { yield 2; }
        };
        return s.length() + n;
    }
}

method id(T): T
  locals: l0: T
  exprs: e0: T
method m(boolean): int
  locals: l1: boolean | l2: java.lang.String | l3: int
  exprs: e1: boolean | e2: boolean | e3: java.lang.String | e4: <error> | e5: java.lang.String | e6: java.lang.String | e7: java.lang.String | e8: boolean | e9: boolean | e10: int | e11: <error> | e12: int | e13: int | e14: java.lang.String | e15: int | e16: int | e17: int
